# NWBLot

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  NWBLot.sln  Testbed.sln  launcher.py  readme.md
3rd_parties/: CMakeLists.txt
3rd_parties/CLI11/: App.hpp  Argv.hpp  CLI.hpp  CMakeLists.txt  Config.hpp  ConfigFwd.hpp  Encoding.hpp  Error.hpp  ExtraValidators.hpp  Formatter.hpp  FormatterFwd.hpp  Macros.hpp  Option.hpp  Split.hpp  StringTools.hpp  Timer.hpp  TypeTools.hpp  Validators.hpp  Version.hpp  nwb_update.txt
3rd_parties/VulkanMemoryAllocator/: CMakeLists.txt  LICENSE.txt  nwb_update.txt
3rd_parties/aftermath/: CMakeLists.txt  Readme.md  nwb_update.txt
3rd_parties/comgr/: CMakeLists.txt  nwb_update.txt
3rd_parties/comgr_utils/: .gitignore  CMakeLists.txt  LICENSE  nwb_update.txt
3rd_parties/curl/: CMakeLists.txt  curl_config.h  libcurl.vcxitems  libcurl.vcxproj  libcurl_and.vcxproj  libcurl_win.vcxproj  nwb_update.txt
3rd_parties/cxxopts/: CMakeLists.txt  nwb_update.txt
3rd_parties/dev_driver/: CMakeLists.txt  nwb_update.txt
3rd_parties/googletest/: CMakeLists.txt  nwb_update.txt
3rd_parties/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  nwb_update.txt
3rd_parties/isa_spec_manager/: .gitignore  CMakeLists.txt  NOTICES.txt  README.md  RELEASE_NOTES.md  nwb_update.txt
3rd_parties/libmicrohttpd/: CMakeLists.txt  MHD_config.h  MHD_config.h.in  libmicrohttpd.vcxitems  libmicrohttpd.vcxproj  libmicrohttpd_win.vcxproj  nwb_update.txt
3rd_parties/mimalloc/: mimalloc.vcxproj
3rd_parties/miniz/: CMakeLists.txt  ChangeLog.md  miniz.h  miniz_common.h  miniz_export.h.in  miniz_tdef.c  miniz_tinfl.c  miniz_zip.c  nwb_update.txt
3rd_parties/nlohmann_json/: CMakeLists.txt  nwb_update.txt
3rd_parties/oneTBB/: CMakeLists.txt  nwb_update.txt  tbb.vcxitems  tbb.vcxproj  tbb_win.vcxproj  tbbmalloc.vcxitems  tbbmalloc.vcxproj  tbbmalloc_proxy.vcxitems  tbbmalloc_proxy.vcxproj  tbbmalloc_proxy_win.vcxproj  tbbmalloc_win.vcxproj
3rd_parties/pevents/: CMakeLists.txt  nwb_update.txt
3rd_parties/pix_events/: .gitignore  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  NOTICE.txt  README.md  cgmanifest.json  nwb_force_std_includes.h  nwb_update.txt
3rd_parties/radeon_gpu_detective/: CMakeLists.txt  README.md  RGD_NOTICES.txt  nwb_update.txt
3rd_parties/rapidjson/: CMakeLists.txt  nwb_update.txt
3rd_parties/rdf/: CMakeLists.txt  README.md  nwb_update.txt
3rd_parties/rmv/: .readthedocs.yaml  Buildinfo.properties.in  CMakeLists.txt  LICENSE.txt  NOTICES.txt  README.md  RELEASE_NOTES.txt  nwb_update.txt
3rd_parties/system_info_utils/: .gitignore  CMakeLists.txt  nwb_update.txt
3rd_parties/tinyxml2/: CMakeLists.txt  nwb_update.txt  tinyxml2.cpp
3rd_parties/tsl/: CMakeLists.txt  nwb_update.txt  robin_growth_policy.h  robin_hash.h
3rd_parties/ufbx/: CMakeLists.txt  README.md  nwb_update.txt  ufbx.c  ufbx.h
3rd_parties/volk/: CMakeLists.txt  VOLK_LICENSE.md  nwb_update.txt
3rd_parties/wmi/: CMakeLists.txt  Makefile  README.md  nwb_update.txt
3rd_parties/zlib/: CMakeLists.txt  inftrees.h  nwb_update.txt  zlib.vcxitems  zlib.vcxproj  zlib_win.vcxproj
3rd_parties/zstd/: CMakeLists.txt  SOURCE  nwb_update.txt
Testbed/: CMakeLists.txt  entry.cpp  project.h  project_testbed.h  project_testbed_entry.cpp  project_testbed_runtime.cpp  runtime.cpp  testbed.vcxitems  testbed_win.vcxproj
Testbed/assets/: bxdf.hlsli.nwb  bxdf_ps.hlsl  bxdf_ps.hlsl.nwb  bxdf_vs.hlsl.nwb
core/: CMakeLists.txt  alloc.vcxitems  alloc.vcxproj  alloc_proxy.vcxproj  alloc_win.vcxproj  assets.vcxitems  assets_win.vcxproj  common.vcxitems  common.vcxproj  common_win.vcxproj  ecs.vcxitems  ecs_graphics.vcxitems  ecs_graphics_win.vcxproj  ecs_win.vcxproj  filesystem.vcxitems  filesystem_win.vcxproj  frame.vcxitems  frame.vcxproj  frame.vcxproj.filters  frame_win.vcxproj  global.h  graphics.vcxitems  graphics.vcxitems.filters  graphics.vcxproj  graphics.vcxproj.filters  graphics_cook.vcxitems  graphics_cook_win.vcxproj  graphics_win.vcxproj  metascript.vcxitems  metascript_win.vcxproj
core/alloc/: CMakeLists.txt  alloc.cpp  alloc.h  arena_names.h  arena_object.h  assetPool.h  base.h  container_adaptor.cpp  core.cpp  core.h  custom.h  default.cpp  general.h  global.h  job.h  memory.h  module.cpp  module.h  new.cpp  persistent.h  scratch.cpp  scratch.h  standalone_runtime.cpp  standalone_runtime.h  thread.h  tlsf.cpp  tlsf.h
core/assets/: CMakeLists.txt  arena_names.h  asset.h  asset_auto_registration.cpp  asset_auto_registration.h  asset_cook_utils.h  asset_cooker.cpp  asset_cooker.h  asset_handle.h  asset_manager.cpp  asset_manager.h  asset_module.cpp  asset_module.h  asset_paths.h  asset_pool.h  asset_ref.h  asset_registry.cpp  asset_registry.h  auto_registration.cpp  auto_registration.h  binary_payload_io.h  cook_entry_registry.cpp  cook_entry_registry.h  cook_metadata.cpp  cook_metadata.h  cook_paths.cpp  cook_paths.h  cooker.cpp  cooker.h  global.h  manager.cpp  manager.h  module.h  paths.h  ref.h  registry.cpp  registry.h
core/common/: CMakeLists.txt  aftermath_runtime.h  application_entry.h  arena_names.h  command_line.h  common.cpp  common.h  global.h  log.cpp  log.h  module.cpp  module.h  name_symbols.cpp  name_symbols.h  standalone_runtime.cpp  win32_message_loop.h
core/crash/: CMakeLists.txt  global.h  (+18 more)
impl/: CMakeLists.txt  global.h
loader/: CMakeLists.txt  loader.vcxitems  loader.vcxitems.filters  loader.vcxproj  loader.vcxproj.filters  loader_win.vcxproj  main.cpp  pch.h  project_entry.cpp  project_entry.h
resource_cooker/: CMakeLists.txt  command_line.cpp  command_line.h  main.cpp  module.cpp  module.h  resource_cooker.cpp  resource_cooker.h  resource_cooker.vcxitems  resource_cooker_command_line.cpp  resource_cooker_win.vcxproj
tests/: CMakeLists.txt  capturing_logger.h  ecs_test_world.h  filesystem_helpers.h  gtest_nwb_main.cpp  meshlet_ref_test_data.h  return_value_handling.py  skinned_geometry_test_helpers.h  test_context.h
(+3091 files in other folders)
