add_subdirectory(common)
add_subdirectory(alloc)
add_subdirectory(geometry)
add_subdirectory(metascript)
add_subdirectory(assets)
add_subdirectory(filesystem)
add_subdirectory(input)
add_subdirectory(graphics)
add_subdirectory(ecs)
add_subdirectory(scene)

if(WIN32 OR CMAKE_SYSTEM_NAME STREQUAL "Linux")
    add_subdirectory(frame)
endif()
