add_subdirectory(skinned_geometry)
add_subdirectory(assets_shader)
add_subdirectory(assets_material)
add_subdirectory(assets_geometry)
add_subdirectory(assets_graphics)
add_subdirectory(ecs_skinned_geometry)
add_subdirectory(ecs_scene)
add_subdirectory(ecs_camera)
add_subdirectory(ecs_lighting)
add_subdirectory(ecs_geometry)
add_subdirectory(ecs_render)
add_subdirectory(ecs_skinned_geometry_render)
add_subdirectory(ecs_ui)

