add_subdirectory(skinned_mesh)
add_subdirectory(assets_shader)
add_subdirectory(assets_material)
add_subdirectory(assets_mesh)
add_subdirectory(assets_graphics)
add_subdirectory(ecs_skinned_mesh)
add_subdirectory(ecs_scene)
add_subdirectory(ecs_camera)
add_subdirectory(ecs_lighting)
add_subdirectory(ecs_mesh)
add_subdirectory(ecs_render)
add_subdirectory(ecs_skinned_mesh_render)
add_subdirectory(ecs_ui)

