add_subdirectory(assets_shader)
add_subdirectory(assets_csg)
add_subdirectory(assets_material)
add_subdirectory(assets_skeleton)
add_subdirectory(assets_mesh)
add_subdirectory(assets_model)
add_subdirectory(assets_graphics)
add_subdirectory(ecs_scene)
add_subdirectory(ecs_csg)
add_subdirectory(ecs_skeleton)
add_subdirectory(ecs_mesh)
add_subdirectory(ecs_model)
add_subdirectory(ecs_render)
add_subdirectory(ecs_model_renderer)
add_subdirectory(ecs_ui)

