add_subdirectory(global)
add_subdirectory(math)
add_subdirectory(metascript)
add_subdirectory(mesh)
add_subdirectory(ecs)
add_subdirectory(scene)
add_subdirectory(csg)
add_subdirectory(ecs_graphics)
if(TARGET nwb_logserver)
    add_subdirectory(logger_server)
endif()
if(TARGET nwb_fbx_to_nwb)
    add_subdirectory(fbx_to_nwb)
endif()
if(TARGET nwb_assets_volume_cook)
    add_subdirectory(assets_graphics)
endif()
if(TARGET testbed OR (TARGET nwb_loader AND TARGET nwb_resource_cooker))
    add_subdirectory(smoke)
endif()
