add_subdirectory(global)
if(TARGET nwb_crash)
    add_subdirectory(crash)
endif()
add_subdirectory(telemetry)
add_subdirectory(math)
add_subdirectory(metascript)
add_subdirectory(mesh)
add_subdirectory(ecs)
add_subdirectory(scene)
add_subdirectory(csg)
add_subdirectory(ecs_graphics)
add_subdirectory(logger_server)
if(TARGET nwb_fbx_to_nwb)
    add_subdirectory(fbx_to_nwb)
endif()
if(TARGET nwb_assets_volume_cook)
    add_subdirectory(assets_graphics)
endif()
if(TARGET testbed OR (TARGET nwb_loader AND TARGET nwb_resource_cooker))
    add_subdirectory(smoke)
endif()
