# Declare a GoogleTest-based test executable: wires the engine application entry point + common init
# (gtest_nwb_main.cpp), links the vendored gtest, and registers the binary with ctest. Suites can still add
# their own sources / dependencies afterwards (e.g. add_dependencies for a child-process helper binary).
function(nwb_declare_gtest_executable target)
    nwb_declare_executable(${target})
    target_sources(${target} PRIVATE "${CMAKE_SOURCE_DIR}/tests/gtest_nwb_main.cpp")
    # gtest, plus the engine runtime the shared entry point needs (Core::Common::InitializerGuard and the test
    # arenas) — this also puts oneTBB's import-lib directory on the link path for its auto-link pragma.
    target_link_libraries(${target} PRIVATE nwb::gtest nwb_common nwb_alloc)
    add_test(NAME ${target} COMMAND ${target})
endfunction()

add_subdirectory(global)
if(TARGET nwb_crash)
    add_subdirectory(crash)
endif()
add_subdirectory(telemetry)
add_subdirectory(math)
add_subdirectory(metascript)
add_subdirectory(mesh)
add_subdirectory(ecs)
add_subdirectory(scene)
add_subdirectory(csg)
add_subdirectory(ecs_graphics)
add_subdirectory(logger_server)
if(TARGET rgd_backend)
    add_subdirectory(rgd_decode)
endif()
if(TARGET nwb_fbx_to_nwb)
    add_subdirectory(fbx_to_nwb)
endif()
if(TARGET nwb_assets_volume_cook)
    add_subdirectory(assets_graphics)
endif()
if(TARGET testbed OR (TARGET nwb_loader AND TARGET nwb_resource_cooker))
    add_subdirectory(smoke)
endif()
